<resources>
    <string name="app_name">Football App</string>

    <!-- LOGIN -->
    <string name="login_fragment_button_text">Login</string>
    <string name="login_fragment_title_text">Login to the</string>
    <string name="login_fragment_error_invalid_format_text">Invalid login format</string>
    <string name="login_fragment_error_empty_password_text">Enter password</string>
    <string name="login_fragment_error_invalid_login_or_password_text">Invalid login or password</string>
    <string name="login_fragment_register_button_text">Register</string>

    <!-- REGISTER -->
    <string name="register_fragment_button_text">Register</string>
    <string name="register_fragment_title_text">Register to the application</string>
    <string name="register_fragment_error_invalid_login_format_text">Login must be a mail</string>
    <string name="register_fragment_error_invalid_password_format_text">Password must be at least 8 characters long and must contain at least one digit, one letter and one nonalphanumeric character</string>
    <string name="register_fragment_error_user_creation_unable">Unable to create user. Try again.</string>

    <!-- LOGIN & REGISTER-->
    <string name="user_name_hint_text">Username</string>
    <string name="password_hint_text">Password</string>

    <!-- SCORERS -->
    <string name="scorers_title_text">Scorers - season:</string>

    <!-- STANDINGS -->
    <string name="standings_title_text">Table - season:</string>
    <string name="standings_fragment_position_text">Pos.</string>
    <string name="standings_fragment_games_played_text">GP</string>
    <string name="standings_fragment_wins_text">W</string>
    <string name="standings_fragment_draws_text">D</string>
    <string name="standings_fragment_lost_text">L</string>
    <string name="standings_fragment_points_text">Pts</string>
    <string name="standings_fragment_team_text">Team</string>

    <!-- OTHER -->
    <string name="internet_unavailable_text">Internet connection unavailable</string>
    <string name="server_error_text">Sorry, there was an error on the server.</string>

    <!-- SPINNER -->
    <string-array name="league_list">
        <item>Bundesliga (Germany)</item>
        <item>Premier League (England)</item>
        <item>Primera Division (Spain)</item>
        <item>Serie A (Italy)</item>
        <item>Ligue 1 (France)</item>
    </string-array>
</resources>