<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/standings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/margin_small_2_dp"
    android:background="@color/grey"
    android:orientation="vertical">

    <TextView
        android:id="@+id/standingsBarPosition"
        style="@style/RecyclerSecondaryTextStyle"
        android:text="@string/standings_fragment_position_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small_8_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/standingsItemTeam"
        style="@style/RecyclerStandingsPrimaryTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small_8_dp"
        android:layout_marginEnd="@dimen/margin_small_4_dp"
        android:text="@string/standings_fragment_team_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/standingsItemGuideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/standingsBarPosition"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/standingsItemGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/standingsItemGuideline"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/standingsItemPlayed"
            style="@style/RecyclerSecondaryTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/standings_fragment_games_played_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/standingsItemWon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/standingsItemWon"
            style="@style/RecyclerSecondaryTextStyle"
            android:background="@drawable/bar_win_shape"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/standings_fragment_wins_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/standingsItemDraws"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/standingsItemPlayed"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/standingsItemDraws"
            style="@style/RecyclerSecondaryTextStyle"
            android:background="@drawable/bar_draw_shape"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/standings_fragment_draws_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/standingsItemLost"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/standingsItemWon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/standingsItemLost"
            style="@style/RecyclerSecondaryTextStyle"
            android:background="@drawable/bar_lost_shape"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/standings_fragment_lost_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/standingsItemPoints"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/standingsItemDraws"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/standingsItemPoints"
            style="@style/RecyclerStandingsPrimaryTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/standings_fragment_points_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/standingsItemLost"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>