<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutRegisterFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:focusableInTouchMode="true"
    tools:context=".ui.register.RegisterFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopRegisterFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStartRegisterFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_large_32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEndRegisterFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_large_32dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTitleRegisterFragment"
        style="@style/TitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_fragment_title_text"
        android:layout_marginBottom="@dimen/margin_medium_20dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTopRegisterFragment"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEndRegisterFragment"
        app:layout_constraintStart_toStartOf="@+id/guidelineStartRegisterFragment" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputUserNameRegisterFragment"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEndRegisterFragment"
        app:layout_constraintStart_toStartOf="@+id/guidelineStartRegisterFragment"
        app:layout_constraintTop_toTopOf="@id/guidelineTopRegisterFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEditUserNameRegisterFragment"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_hint_text"
            android:imeOptions="flagNavigateNext"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPasswordRegisterFragment"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEndRegisterFragment"
        app:layout_constraintStart_toStartOf="@+id/guidelineStartRegisterFragment"
        app:layout_constraintTop_toBottomOf="@id/textInputUserNameRegisterFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEditPasswordRegisterFragment"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint_text"
            android:imeOptions="actionDone|actionSend|actionGo"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegisterFragment"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_large_32dp"
        android:text="@string/register_fragment_button_text"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEndRegisterFragment"
        app:layout_constraintStart_toStartOf="@+id/guidelineStartRegisterFragment"
        app:layout_constraintTop_toBottomOf="@id/textInputPasswordRegisterFragment" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBarRegisterFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="?android:attr/progressBarStyle"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>